Tasks page width fixes.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -24,10 +24,10 @@ body {
 
 .container {
   padding: 0 15px; // http://getbootstrap.com/css/#grid
+  max-width: 400px;
 }
 
 .em-page {
-  max-width: 400px;
 }
 
 .em-slides {
@@ -39,7 +39,8 @@ body {
 }
 
 .em-scrollable {
-  height: 100%;
+  // height: 100%;
+  padding-top: 3em;
   // overflow-y: auto;
 }
 
@@ -48,8 +49,10 @@ body {
   padding-right: 15px;
 }
 
-.em-feature-header {
-  height: 3em;
+.em-feature-header .navbar-fixed-top {
+  // height: 3em;
+  // right: auto;
+  // left: auto;
 }
 
 .em-menu-footer .navbar-fixed-bottom {
