--- a/frontend/core/src/main/webapp/static/partials/my/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasksSlides.html
@@ -1,8 +1,5 @@
 <ul class="em-slides" em-carousel em-carousel-index="slide">
-  <li class="em-slide" my>
-  </li>
-  <li class="em-slide" tasks>
-  </li>
-  <li class="em-slide" today>
-  </li>
+    <li class="em-slide" my></li>
+    <li class="em-slide" tasks></li>
+    <!-- <li class="em-slide" today></li> -->
 </ul>
