--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/subTask.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/subTask.html
@@ -1,10 +1,10 @@
-<form class="form-horizontal" role="form" name="subtaskToList" ng-submit="addSubtask()">
+<form class="form" role="form" name="subtaskToList" ng-submit="addSubtask()">
 
-  <div class="form-group">
-    <label class="sr-only" for="taskTitle">title</label>
-    <div class="col-lg-10">
-      <input type="text" class="form-control" id="taskTitle" ng-model="subtask.title" placeholder="add subtask...">
+    <div class="form-group">
+        <label class="sr-only" for="taskTitle">title</label>
+        <div class="col-lg-10">
+            <input type="text" class="form-control" id="taskTitle" ng-model="subtask.title" placeholder="add subtask...">
+        </div>
     </div>
-  </div>
 
 </form>
