Fixed carousel slides width.

--- a/frontend/core/src/main/webapp/static/less/carousel.less
+++ b/frontend/core/src/main/webapp/static/less/carousel.less
@@ -6,6 +6,7 @@
 ul.em-carousel-slides {
   position: relative;
   white-space: nowrap;
+  // overflow: visible;
   -webkit-transform: translate(0, 0);
   -moz-transform: translate(0, 0);
   -ms-transform: translate(0, 0);
