--- a/frontend/core/src/main/webapp/static/partials/my/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasksSlides.html
@@ -1,5 +1,4 @@
 <ul class="em-slides" em-carousel em-carousel-index="slide">
-    <li class="em-slide" my></li>
-    <li class="em-slide" tasks></li>
-    <!-- <li class="em-slide" today></li> -->
+    <li class="container em-slide" my></li>
+    <li class="container em-slide" tasks></li>
 </ul>
