--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -22,12 +22,9 @@ body {
   font-size: 24px;
 }
 
-.container {
-  padding: 0 15px; // http://getbootstrap.com/css/#grid
-  max-width: 400px;
-}
-
 .em-page {
+  // padding: 0 15px; // http://getbootstrap.com/css/#grid
+  max-width: 400px;
 }
 
 .em-slides {
@@ -39,9 +36,12 @@ body {
 }
 
 .em-scrollable {
-  // height: 100%;
+  height: inherit;
+  padding-left: 15px;
+  padding-right: 15px;
   padding-top: 3em;
-  // overflow-y: auto;
+  padding-bottom: 3em;
+  overflow-y: auto;
 }
 
 .em-mainlink {
