--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,4 +1,4 @@
-<div class="em-scrollable">
+<div class="row em-scrollable">
   <div class="row center-block em-logo">
     <h1 class="text-primary"><span>extended mind</span></h1>
   </div>
@@ -29,4 +29,6 @@
   </div>
 </div>
 
-<div class="row em-menu-footer" navbar></div>
+<div class="row em-menu-footer">
+  <div navbar></div>
+</div>
