--- a/frontend/core/src/main/webapp/static/less/carousel.less
+++ b/frontend/core/src/main/webapp/static/less/carousel.less
@@ -1,19 +1,20 @@
 .em-carousel-container {
   overflow: hidden;
   height: inherit;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 ul.em-carousel-slides {
   position: relative;
   white-space: nowrap;
-  // overflow: visible;
+  overflow: visible;
   -webkit-transform: translate(0, 0);
   -moz-transform: translate(0, 0);
   -ms-transform: translate(0, 0);
   -o-transform: translate(0, 0);
   transform: translate(0, 0);
-  padding: 0;
-  margin: 0;
+  padding-left: 0;
 }
 
 ul.em-carousel-slides > li {
