--- a/frontend/core/src/main/webapp/static/partials/my/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasksSlides.html
@@ -1,4 +1,5 @@
 <ul class="em-slides" em-carousel em-carousel-index="slide">
     <li class="container em-slide" my></li>
     <li class="container em-slide" tasks></li>
+    <li class="container em-slide" today></li>
 </ul>
