--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -49,19 +49,23 @@ body {
   padding-right: 15px;
 }
 
-.em-feature-header .navbar-fixed-top {
-  // height: 3em;
-  // right: auto;
-  // left: auto;
-}
-
 .em-menu-footer .navbar-fixed-bottom {
   right: auto;
   left: auto;
 }
 
-.em-date-footer {
-  height: 3em;
+.em-date-footer .navbar-fixed-bottom {
+}
+
+.navbar-default, .navbar-collapse {
+  background-color: white;
+  border: none;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.nav > li > span {
+  padding: 10px 15px;
 }
 
 .datebar {
@@ -112,17 +116,6 @@ input[type="checkbox"].task-checkbox:checked + span {
   border-style: solid none;
   border-width: 1px;
   border-color: #8E8E93;
-}
-
-.navbar-default, .navbar-collapse {
-  background-color: white;
-  border: none;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.nav > li > span {
-  padding: 10px 15px;
 }
 
 .em-padding
