Layout for omnibar

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -154,3 +154,17 @@ input[type="checkbox"].task-checkbox:checked + span {
     display: none;
   }
 }
+
+.em-omnibar input {
+  max-width: 23em;
+  border-radius:10px;
+  display: inline;
+}
+
+.em-plus {
+  font-size:14px;
+  border-color: #cccccc;
+  border-radius:50px;
+  background:#FFFFFF;
+}
+
