--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -1,7 +1,7 @@
 <div class="row em-feature-header">
 
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <button type="button" class="btn btn-default pull-right" ng-click="addNew()">
+    <button type="button" class="btn em-plus pull-right" ng-click="addNew()">
       +
     </button>
     <h1 class="text-primary">tasks</h1>
