--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/filteredTasksList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/filteredTasksList.html
@@ -1,6 +1,6 @@
 <div>
-
-  <div ng-transclude></div>
+  <!-- FIXME: set ng-show based on if there is text in the omnibar! -->
+  <div ng-show="(false)" ng-transclude></div>
 
   <ul class="list-unstyled" ng-show="tasksListFilter">
 
