--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,10 +1,20 @@
+// VARIABLES
+
+@em-max-width: 480px;
+@em-font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+// padding: 0 15px; // http://getbootstrap.com/css/#grid
+@em-page-padding: 15px;
+@em-blue: #428bca;
+
+// GENERAL
+
 h1 {
-  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-family: @em-font;
   font-weight: 100;
 }
 
 h2, h3, h4, h5, h6 {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: @em-font;
   font-weight: 300;
 }
 
@@ -17,14 +27,33 @@ html {
 }
 
 body {
-  font-family: 'Helvetica Neue UltraLight', "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: @em-font;
   font-weight: 300;
   font-size: 24px;
 }
 
+label {
+  font-weight: normal;
+}
+
+ul {
+  list-style-type: none;
+  .entry-list {
+    padding-left: 0;
+  }
+}
+
+// EM SPECIFIC
+
 .em-page {
-  // padding: 0 15px; // http://getbootstrap.com/css/#grid
-  max-width: 400px;
+  max-width: @em-max-width;
+  .row {
+    padding-left: @em-page-padding;
+    padding-right: @em-page-padding;
+  }
+  .container {
+    max-width: @em-max-width;
+  }
 }
 
 .em-slides {
@@ -35,37 +64,14 @@ body {
   height: inherit;
 }
 
-.em-scrollable {
+.em-unscrollable, .em-scrollable {
   height: inherit;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 3em;
-  padding-bottom: 3em;
+  padding-top: 1em;
+  padding-bottom: 1em;  
+}
+
+.em-scrollable {
   overflow-y: auto;
-}
-
-.em-mainlink {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.em-menu-footer .navbar-fixed-bottom {
-  right: auto;
-  left: auto;
-}
-
-.em-date-footer .navbar-fixed-bottom {
-}
-
-.navbar-default, .navbar-collapse {
-  background-color: white;
-  border: none;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.nav > li > span {
-  padding: 10px 15px;
 }
 
 .datebar {
@@ -77,9 +83,6 @@ body {
   padding-right: 30px;
 }
 
-label {
-  font-weight: normal;
-}
 
 .em-front {
   height: 100%;
@@ -96,16 +99,10 @@ ul.em-headers {
   margin-left: 0;
 }
 
-ul {
-  list-style-type: none;
-}
 .item-actions {
   padding-bottom: 10px;
 }
 
-ul.entry-list {
-  padding-left: 0;
-}
 
 input[type="checkbox"].task-checkbox:checked + span {
   text-decoration: line-through;
@@ -118,10 +115,17 @@ input[type="checkbox"].task-checkbox:checked + span {
   border-color: #8E8E93;
 }
 
-.em-padding
-{
-  padding-left: 15px;
-  padding-right: 15px;
+.em-filtered-items {
+  a {
+    color: @em-blue;
+  }
+}
+
+.em-inbox {
+  a {
+    color: @em-blue;
+    font-size: 14px;
+  }
 }
 
 .em-simple-input {
@@ -132,12 +136,6 @@ input[type="checkbox"].task-checkbox:checked + span {
   border-radius: 0 !important;
   background: none;
   font-size: 16px;
-}
-
-.btn {
-  font-size: 28px;
-  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  font-weight: 100;
 }
 
 #remember {
@@ -155,16 +153,60 @@ input[type="checkbox"].task-checkbox:checked + span {
   }
 }
 
-.em-omnibar input {
-  max-width: 23em;
-  border-radius:10px;
-  display: inline;
+.em-omnibar {
+  .form-control { 
+    width: 85%;
+  }
+  input {
+    border-radius:8px;
+    display: inline;
+  }
 }
 
 .em-plus {
   font-size:14px;
   border-color: #cccccc;
-  border-radius:50px;
+  border-radius:50%;
   background:#FFFFFF;
 }
 
+.em-icon {
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+  position:relative; top:-2px;
+  margin-right: 2px;
+  text-transform: uppercase;
+  border-radius:50%;
+  border: solid 1px;
+  border-color: @em-blue;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.em-feature {
+  color: @em-blue !important;
+}
+
+.em-mainlinks {
+  #em-taskslink {
+    text-align: left;
+  }
+  #em-menubutton{
+    text-align: center;
+    min-width: 3em;
+    width:100%;
+    button {
+      padding-left: 12%;
+      font-size: 10px;
+      color: @em-blue;     
+    }
+    div {
+      text-align: left;
+    } 
+  }
+  #em-noteslink {
+    text-align: right;
+  }
+}
