--- a/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
@@ -1,6 +1,6 @@
 <div class="em-slide">
 
-  <button type="button" class="btn btn-default pull-right" ng-click="addNew()">
+  <button type="button" class="btn em-plus pull-right" ng-click="addNew()">
     +
   </button>
 
