--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,4 +1,4 @@
-<div class="row em-scrollable">
+<div class="row em-scrollable-top">
   <div class="row center-block em-logo">
     <h1 class="text-primary"><span>extended mind</span></h1>
   </div>
