--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -4,12 +4,11 @@
     <button type="button" class="btn em-plus pull-right" ng-click="addNew()">
       +
     </button>
-    <h1 class="text-primary">tasks</h1>
+    <h3 class="text-primary">tasks</h3>
   </nav>
-
 </div>
 
-<div class="row em-scrollable">
+<div class="row em-scrollable-bottom">
 
   <h2>unsorted</h2>
   <ul class="list-unstyled">
