Disabled navbar styles.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -50,18 +50,18 @@ body {
 }
 
 .em-menu-footer .navbar-fixed-bottom {
-  right: auto;
-  left: auto;
+  // right: auto;
+  // left: auto;
 }
 
 .em-date-footer .navbar-fixed-bottom {
 }
 
 .navbar-default, .navbar-collapse {
-  background-color: white;
-  border: none;
-  padding-left: 0;
-  padding-right: 0;
+  // background-color: white;
+  // border: none;
+  // padding-left: 0;
+  // padding-right: 0;
 }
 
 .nav > li > span {
@@ -69,12 +69,12 @@ body {
 }
 
 .datebar {
-  width: 100%;
-  overflow-x: auto;
+  // width: 100%;
+  // overflow-x: visible;
 }
 
 .datebar > table > tbody> tr > td {
-  padding-right: 30px;
+  // padding-right: 30px;
 }
 
 label {
@@ -99,6 +99,7 @@ ul.em-headers {
 ul {
   list-style-type: none;
 }
+
 .item-actions {
   padding-bottom: 10px;
 }
