--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -134,10 +134,6 @@ ul.em-headers {
   margin-left: 0;
 }
 
-ul {
-  list-style-type: none;
-}
-
 .item-actions {
   padding-bottom: 10px;
 }
@@ -162,6 +158,9 @@ input[type="checkbox"].task-checkbox:checked + span {
 .em-inbox {
   a {
     color: @em-blue;
+    font-size: 14px;
+  }
+  span {
     font-size: 14px;
   }
 }
