--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -6,7 +6,9 @@
   <div class="row em-omnibar" omni-bar></div>
 
   <div class="row em-inbox" items-list itemsfilter="newItem.title">
-    <a class="text-muted" href="" ng-click="toggleItemsList()">inbox</a><span class="pull-right"><small>{{completed}}</small></span>
+    <a href="" ng-click="toggleItemsList()">inbox</a>
+    <span class="text-muted">{{items.length}}</span>
+    <span class="pull-right"><small>{{completed}}</small></span>
   </div>
 
   <div class="row em-filtered-items" filtered-notes-list notesfilter="newItem.title">
@@ -19,6 +21,7 @@
 
   <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
 </div>
+
 <div class="row em-menu-footer">
-  <div navbar></div>
+  <div navbar mainlinksfilter="newItem.title"></div>
 </div>
