--- a/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
@@ -2,10 +2,10 @@
 
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 
-      <button type="button" class="btn btn-default pull-right" ng-click="addNew()">
-        +
-      </button>
-      <h1 class="text-primary">date</h1>
+    <button type="button" class="btn btn-default pull-right" ng-click="addNew()">
+      +
+    </button>
+    <h1 class="text-primary">date</h1>
   </nav>
 
 </div>
@@ -26,7 +26,7 @@
 </div>
 
 <div class="row em-date-footer">
-  <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+  <div class="navbar navbar-default navbar-fixed-bottom" role="navigation">
 
     <div class="datebar">
       <table>
@@ -38,5 +38,4 @@
       </table>
     </div>
   </div>
-
-</nav>
+</div>
