--- a/frontend/core/src/main/webapp/static/partials/templates/navbar.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navbar.html
@@ -1,14 +1,16 @@
 <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
   <div class="container">
+
     <div class="row em-mainlinks">
       <ul class="nav navbar-nav nav-justified">
-        <li id="em-taskslink"><a class="em-feature" href="{{prefix}}/tasks"><span class="em-icon">t</span>tasks</a></li>
+        <li id="em-taskslink" ng-hide="mainlinksFilter"><a class="em-feature" href="{{prefix}}/tasks"><span class="em-icon">t</span>tasks</a></li>
         <li id="em-menubutton">
           <button type="button" class="em-simple-input" ng-click="collapseNavbar()">&#x25B2;</button>
         </li>
-        <li id="em-noteslink"><a href="{{prefix}}/notes" class="em-feature"><span class="em-icon">n</span>notes</a></li>
+        <li id="em-noteslink" ng-hide="mainlinksFilter"><a href="{{prefix}}/notes" class="em-feature"><span class="em-icon">n</span>notes</a></li>
       </ul>
     </div>
+
     <div class="row" ng-show="collapse">
       <ul>
         <li>
@@ -32,5 +34,6 @@
         </li>
       </ul>
     </div>
+
   </div>
 </nav>
