--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/filteredTasksList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/filteredTasksList.html
@@ -1,19 +1,15 @@
 <div>
-  <!-- FIXME: set ng-show based on if there is text in the omnibar! -->
-  <div ng-show="(false)" ng-transclude></div>
+    <div ng-if="tasksListFilter" ng-transclude></div>
 
-  <ul class="list-unstyled" ng-show="tasksListFilter">
+    <ul class="list-unstyled" ng-if="tasksListFilter">
 
-    <li ng-class="selected" ng-repeat="task in tasks | filter:tasksListFilter">
+        <li ng-class="selected" ng-repeat="task in tasks | filter:{title:tasksListFilter}">
 
-      <input type="checkbox" name="checkbox" id="checkbox{{$index}}" class="task-checkbox" ng-checked="task.completed" ng-click="taskChecked($index)">
+            <input type="checkbox" name="checkbox" id="checkbox{{$index}}" class="task-checkbox" ng-checked="task.completed" ng-click="taskChecked(task)">
 
-      <span ng-click="toggleTaskContent()">{{task.title}}</span>
+            <span>{{task.title}}</span>
 
-      <div task-content ng-show="showTaskContent"></div>
+        </li>
 
-    </li>
-
-  </ul>
-
+    </ul>
 </div>
