--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -77,11 +77,13 @@ ul {
 // Pages with two sections
 .em-scrollable-top {
   height: inherit;
-  padding-bottom: 2em;
+  margin-bottom: 2em;
 }
 .em-scrollable-bottom {
   height: inherit;
-  padding-top: 2em;
+  margin-top: 2em;
+  // Padding needed to make scrolling reach bottom
+  padding-bottom: 2.5em;
 }
 
 .em-scrollable-top, .em-scrollable-bottom {
@@ -91,8 +93,8 @@ ul {
 // Pages with three sections
 .em-scrollable-middle {
   height: inherit;
-  padding-top: 2em;
-  padding-bottom: 2em;
+  margin-top: 2em;
+  margin-bottom: 2em;
   overflow-y: auto;
 }
 
@@ -218,6 +220,21 @@ input[type="checkbox"].task-checkbox:checked + span {
     div {
       text-align: left;
     } 
+  }
+  #em-noteslink {
+    text-align: right;
+  }
+}
+
+.em-feature-header {
+  #em-iconlink {
+    padding-left: 15px;
+    text-align: left;
+  }
+  #em-featurelink{
+    text-align: center;
+    min-width: 3em;
+    width:100%;
   }
   #em-noteslink {
     text-align: right;
