--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -1,16 +1,21 @@
-<div class="row em-feature-header">
-
+<div id="em-feature-header-tasks"class="row em-feature-header">
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <button type="button" class="btn em-plus pull-right" ng-click="addNew()">
-      +
-    </button>
-    <h3 class="text-primary">tasks</h3>
+    <ul class="nav navbar-nav nav-justified">
+      <li id="em-iconlink">
+        <a href="{{prefix}}"><span class="em-icon">t</span></a>
+      </li>
+      <li id="em-featurelink">
+        <a class="em-feature" href="{{prefix}}/today">home</a>
+      </li>
+      <li id="em-addnewbutton">
+        <button type="button" class="btn em-plus" ng-click="addNew()">+</button>
+      </li>
+    </ul>
   </nav>
 </div>
 
 <div class="row em-scrollable-bottom">
-
-  <h2>unsorted</h2>
+  <h3>unsorted</h3>
   <ul class="list-unstyled">
     <li ng-class="selected" ng-repeat="task in tasks | tasksFilter:filterService.activeFilters.unsorted">
 
@@ -21,7 +26,7 @@
   </ul>
 
   <div>
-    <h2>projects</h2>
+    <h3>projects</h3>
     <ul class="list-unstyled">
       <li ng-class="selected" ng-repeat="task in tasks | tasksFilter:filterService.activeFilters.project">
 
@@ -31,10 +36,10 @@
     </ul>
   </div>
 
-  <h2>areas</h2>
+  <h3>areas</h3>
 
   <div contexts-list>
-    <h2>contexts</h2>
+    <h3>contexts</h3>
   </div>
 
 </div>
