Horizontal scroll inside carousel. Refactoring.

--- a/frontend/core/src/main/webapp/static/less/carousel.less
+++ b/frontend/core/src/main/webapp/static/less/carousel.less
@@ -15,6 +15,7 @@ ul.em-carousel-slides {
   -o-transform: translate(0, 0);
   transform: translate(0, 0);
   padding-left: 0;
+  z-index: 0;
 }
 
 ul.em-carousel-slides > li {
