--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -20,8 +20,7 @@
   </div>
 
   <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
+
 </div>
 
-<div class="row em-menu-footer">
-  <div navbar mainlinksfilter="newItem.title"></div>
-</div>
+<div class="row em-menu-footer" navbar mainlinksfilter="newItem.title"></div>
