--- a/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
@@ -12,7 +12,7 @@
         <button type="button" class="btn em-plus" ng-click="addNew()">+</button>
       </li>
     </ul>
-    
+
   </nav>
 </div>
 
@@ -31,17 +31,4 @@
 
 </div>
 
-<div class="row em-date-footer">
-  <div class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-
-    <div class="datebar">
-      <table>
-        <tbody>
-          <tr>
-            <td ng-repeat="date in dates"><a class="text-muted" href="" ng-click="dateClicked(date)">{{date.displayDateShort}}</a></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
+<div class="row em-date-footer" datebar></div>
