--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -8,31 +8,23 @@
 
       <div class="form-group">
         <label for="input-email" class="sr-only">email</label>
-        <div class="">
-          <input type="email" class="form-control em-simple-input" id="input-email" ng-model="user.username" placeholder="enter email..." autofocus="autofocus" required>
-        </div>
+        <input type="email" class="form-control em-simple-input" id="input-email" ng-model="user.username" placeholder="enter email..." autofocus="autofocus" required>
       </div>
       
       <div class="form-group">
         <label for="input-password" class="sr-only">password</label>
-        <div class="">
-          <input type="password" class="form-control em-simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." required>
-        </div>
+        <input type="password" class="form-control em-simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." required>
       </div>
-      
-      <div class="form-group">
-        <div class="">
-          <input type="checkbox" name="checkbox" id="remember" ng-model="user.remember">
-          <label id="remember" for="remember">remember</label>
-        </div>
+   
+       <div class="form-group">        
+        <input class="input-checkbox" type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked">
+        <label class="input-label em-checkbox" id="remember" for="remember">remember</label>
       </div>
-      
+
       <div class="form-group">
-        <div class="">
-          <button type="submit" class="text-primary btn em-simple-input" id="login-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
-            login
-          </button>
-        </div>
+        <button type="submit" class="text-primary btn em-simple-input" id="login-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
+          login
+        </button>
       </div>
       
     </form>
