--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -238,6 +238,17 @@ input[type="checkbox"].task-checkbox:checked + span {
   }
 }
 
+.em-date-footer > div {
+  width: 100%;
+  overflow-x: auto;
+}
+
+.em-date-footer > div > table > tbody> tr > td {
+  padding-right: 0.5em;
+}
+
+// Checkbox
+
 label {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -275,12 +286,3 @@ input[type=checkbox].input-checkbox:checked + label.input-label {
 }
 
 .em-checkbox{background-image:url(../img/checkbox.png);
-
-.em-date-footer > div {
-  width: 100%;
-  overflow-x: auto;
-}
-
-.em-date-footer > div > table > tbody> tr > td {
-  padding-right: 0.5em;
-}
