--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -285,4 +285,4 @@ input[type=checkbox].input-checkbox:checked + label.input-label {
   background-position: 0 -15px;
 }
 
-.em-checkbox{background-image:url(../img/checkbox.png);
+.em-checkbox{background-image:url(../img/checkbox.png); }
