Variables in separate files. Task link color override

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,13 +1,6 @@
+@import "variables.less";
 @import "em-bootstrap-fixes.less";
 @import "carousel.less";
-
-// VARIABLES
-
-@em-max-width: 480px;
-@em-font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-// padding: 0 15px; // http://getbootstrap.com/css/#grid
-@em-page-padding: 15px;
-@em-blue: #428bca;
 
 // GENERAL
 
