--- a/frontend/core/src/main/webapp/static/less/em-bootstrap-fixes.less
+++ b/frontend/core/src/main/webapp/static/less/em-bootstrap-fixes.less
@@ -1,4 +1,5 @@
 @import "em-bootstrap.less";
+@import "variables.less";
 
 // Fix for navbar-justified
 // ref: https://github.com/twbs/bootstrap/issues/10548
@@ -52,3 +53,9 @@
 .navbar-fixed-top, .navbar-fixed-bottom {
   position: absolute;
 }
+
+// Override Bootstrap active link color
+.navbar-default .navbar-nav > li > a {
+color: @em-blue;
+}
+
