Renamed done to complete in project content dialog.

--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/projectContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/projectContent.html
@@ -4,6 +4,6 @@
   </button>
 
   <button type="button" class="btn btn-default" ng-click="completeProject(project)">
-    done
+    complete
   </button>
 </div>
