active link fix

--- a/frontend/core/src/main/webapp/static/less/em-bootstrap-fixes.less
+++ b/frontend/core/src/main/webapp/static/less/em-bootstrap-fixes.less
@@ -55,7 +55,6 @@
 }
 
 // Override Bootstrap active link color
-.navbar-default .navbar-nav > li > a {
-color: @em-blue;
-}
+.navbar-default .navbar-nav > li > a { color: @em-blue; }
+.navbar-default .navbar-nav > li > a:hover { color: @em-blue; }
 
