--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -8,16 +8,16 @@
 
       <div class="form-group">
         <label for="input-email" class="sr-only">email</label>
-        <input type="email" class="form-control em-simple-input" id="input-email" ng-model="user.username" placeholder="enter email..." autofocus="autofocus" required>
+        <input type="email" class="form-control em-simple-input" id="input-email" ng-model="user.username" placeholder="enter email..." autofocus="autofocus" required />
       </div>
       
       <div class="form-group">
         <label for="input-password" class="sr-only">password</label>
-        <input type="password" class="form-control em-simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." required>
+        <input type="password" class="form-control em-simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." required />
       </div>
-   
-       <div class="form-group">        
-        <input class="input-checkbox" type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked">
+      
+      <div class="form-group">        
+        <input class="input-checkbox" type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked" />
         <label class="input-label em-checkbox" id="remember" for="remember">remember</label>
       </div>
 
