--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -52,6 +52,10 @@ ul {
   }
 }
 
+.em-feature-header > nav > .container {
+  padding: 0;
+}
+
 .em-simple-input {
   outline: none;
   border:none !important;
@@ -73,14 +77,13 @@ ul {
 // Pages with two sections
 .em-scrollable-top {
   height: inherit;
-  margin-bottom: 2em;
+  padding-bottom: 2.5em;
 }
 
 .em-scrollable-bottom {
   height: inherit;
-  margin-top: 2em;
   // Padding needed to make scrolling reach bottom
-  padding-bottom: 2.5em;
+  padding-top: 2.5em;
 }
 
 .em-scrollable-top, .em-scrollable-bottom {
@@ -90,9 +93,9 @@ ul {
 // Pages with three sections
 .em-scrollable-middle {
   height: inherit;
-  margin-top: 2em;
-  margin-bottom: 2em;
   overflow-y: auto;
+  padding-top: 2.5em;
+  padding-bottom: 2.5em;
 }
 
 // EM SLIDES
