--- a/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
@@ -6,7 +6,7 @@
         <a href="{{prefix}}"><span class="em-icon">t</span></a>
       </li>
       <li id="em-featurelink">
-        <a class="em-feature" href="{{prefix}}/projects">date</a>
+        <a class="em-feature" href="">date</a>
       </li>
       <li id="em-addnewbutton">
         <button type="button" class="btn em-plus" ng-click="addNew()">+</button>
