--- a/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
@@ -1,11 +1,29 @@
+<div id="em-feature-header-tasks" class="row em-feature-header">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+      <ul class="nav navbar-nav nav-justified">
+        <li id="em-iconlink">
+          <a href="{{prefix}}"><span class="em-icon">t</span></a>
+        </li>
+        <li id="em-featurelink">
+          <a class="em-feature" href="{{prefix}}/tasks">project</a>
+        </li>
+        <li id="em-addnewbutton">
+          <button type="button" class="btn em-plus" ng-click="addNew()">+</button>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
+
 <div class="em-slide">
 
-  <button type="button" class="btn btn-default pull-right" ng-click="cancelEdit()">
+<!--   <button type="button" class="btn btn-default pull-right" ng-click="cancelEdit()">
     -
   </button>
 
   <h1 class="text-primary"><a href="{{prefix}}/notes">notes</a></h1>
-
+ -->
   <div edit-note></div>
 
 </div>
