checkbox font size tweaking

--- a/frontend/core/src/main/webapp/static/less/em-bootstrap-fixes.less
+++ b/frontend/core/src/main/webapp/static/less/em-bootstrap-fixes.less
@@ -58,3 +58,8 @@
 .navbar-default .navbar-nav > li > a { color: @em-blue; }
 .navbar-default .navbar-nav > li > a:hover { color: @em-blue; }
 
+// label had this, but span didn't
+.form-group > span {
+  margin-bottom: 5px;
+}
+
