--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -17,8 +17,8 @@
       </div>
    
        <div class="form-group">        
-        <input class="input-checkbox" type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked">
-        <label class="input-label em-checkbox" id="remember" for="remember">remember</label>
+        <input class="em-input-checkbox" type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked">
+        <label class="em-input-text em-checkbox" id="remember" for="remember">remember</label>
       </div>
 
       <div class="form-group">
