Fixed logo size

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -146,9 +146,9 @@ input[type="checkbox"].task-checkbox:checked + span {
 }
 
 .em-logo {
-  background-image: url(../img/extmd_logo_final_234x114.png);
-  width: 234px;
-  height: 114px;
+  img {
+    width: 185px;
+  }
   margin-bottom: 1em;
   margin-top: 3em;
   background-repeat: no-repeat;
