--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,5 +1,6 @@
 <div class="row em-scrollable-top">
   <div class="row center-block em-logo">
+    <img class="center-block" src="static/img/extmd_logo_final_234x114.png"/>
     <h1 class="text-primary"><span>extended mind</span></h1>
   </div>
 
