Removed shadow from iOS

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -164,6 +164,7 @@ input[type="checkbox"].task-checkbox:checked + span {
   input {
     border-radius:8px;
     display: inline;
+    -webkit-appearance: none;
   }
 }
 
