--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -3,3 +3,5 @@
 // padding: 0 15px; // http://getbootstrap.com/css/#grid
 @em-page-padding: 15px;
 @em-blue: #428bca;
+@em-blue-disabled: #c6dcef;
+@em-completed: #AFAFAF;
