--- a/frontend/core/src/main/webapp/static/partials/templates/navbar.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navbar.html
@@ -7,7 +7,7 @@
         <li id="em-menubutton">
           <button type="button" class="em-simple-input" ng-click="collapseNavbar()">&#x25B2;</button>
         </li>
-        <li id="em-noteslink" ng-hide="mainlinksFilter"><a href="{{prefix}}/notes" class="em-feature"><span class="em-icon">n</span>notes</a></li>
+        <li id="em-noteslink" ng-hide="mainlinksFilter"><a href="" class="em-feature-disabled"><span class="em-icon">n</span>notes</a></li>
       </ul>
     </div>
 
