--- a/frontend/core/src/main/webapp/static/partials/my/tasks/context.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/context.html
@@ -1,13 +1,24 @@
-<div class="em-slide">
+<div id="em-feature-header-tasks" class="row em-feature-header">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <ul class="nav navbar-nav nav-justified">
+                <li id="em-iconlink">
+                    <a href="{{prefix}}"><span class="em-icon">t</span></a>
+                </li>
+                <li id="em-featurelink">
+                    <a class="em-feature" href="{{prefix}}/tasks">context</a>
+                </li>
+                <li id="em-addnewbutton">
+                    <button type="button" class="btn em-plus" ng-click="addNew()">+</button>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 
-  <button type="button" class="btn btn-default pull-right" ng-click="addNew()">
-    +
-  </button>
-
-  <h1 class="text-primary"><a href="{{prefix}}/tasks">tasks</a></h1>
-
-  <div tasks-list>
-    <h2>@{{context.title}}</h2>
-  </div>
+<div class="row em-scrollable-bottom">
+    <div tasks-list>
+        <h2>@{{context.title}}</h2>
+    </div>
 
 </div>
