--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/task.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/task.html
@@ -1,9 +1,10 @@
 <div>
 
-  <input type="checkbox" name="checkbox" id="checkbox{{$index}}" class="task-checkbox" ng-checked="task.completed" ng-click="taskChecked(task)">
+    <input type="checkbox" name="checkbox" id="checkbox{{$index}}" class="em-input-checkbox" ng-checked="task.completed" ng-click="taskChecked(task)" />
 
-  <span ng-click="toggleTaskContent()">{{task.title}}</span>
+    <label class="em-input-text em-checkbox" id="checkbox{{$index}}" for="checkbox{{$index}}"></label>
+    <span ng-click="toggleTaskContent()">{{task.title}}</span>
 
-  <div task-content ng-show="showTaskContent"></div>
+    <div task-content ng-show="showTaskContent"></div>
 
 </div>
