Fixed login button

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -168,10 +168,16 @@ input[type="checkbox"].em-input-checkbox:checked + span {
 }
 
 .em-plus {
-  font-size:14px;
+  font-size: 14px;
   border-color: #cccccc;
-  border-radius:50%;
-  background:#FFFFFF;
+  border-radius: 50%;
+  background: white;
+}
+
+.em-big-button {
+  font-size: 24px;
+  color: @em-blue;
+  padding-top: 15px;
 }
 
 .em-icon {
