--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -22,7 +22,7 @@
         <label class="em-input-text em-checkbox" id="remember" for="remember">remember</label>
 
       <div class="form-group">
-        <button type="submit" class="text-primary btn em-simple-input" id="login-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
+        <button type="submit" class="em-big-button btn em-simple-input" id="login-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
           login
         </button>
       </div>
