borderless subtask input

--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/subTask.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/subTask.html
@@ -1,9 +1,9 @@
-<form class="form-horizontal" role="form" name="subtaskToList" ng-submit="addSubtask(subtask)">
+<form class="form" role="form" name="subtaskToList" ng-submit="addSubtask(subtask)">
 
     <div class="form-group">
         <label class="sr-only" for="taskTitle">title</label>
         <div class="col-lg-10">
-            <input type="text" class="form-control" id="taskTitle" ng-model="subtask.title" placeholder="add task...">
+            <input type="text" class="form-control em-simple-input em-tiny-left-margin" id="taskTitle" ng-model="subtask.title" placeholder="add task...">
         </div>
     </div>
 
