--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -282,3 +282,7 @@ input[type=checkbox].em-input-checkbox:checked + .em-input-text {
 .form-group > label, .form-group > span {
    font-size: 16px !important;
 }
+
+.em-tiny-left-margin {
+  margin-left: 8px;
+}
