Simple input in edit task.

--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
@@ -3,22 +3,22 @@
   <div class="form-group">
     <label class="sr-only" for="taskTitle">title</label>
     <div class="col-lg-10">
-      <input type="text" class="form-control" id="taskTitle" ng-model="task.title" autofocus="autofocus" placeholder="title..." required>
+      <input type="text" class="form-control em-simple-input" id="taskTitle" ng-model="task.title" autofocus="autofocus" placeholder="title..." required>
     </div>
   </div>
 
   <div class="form-group">
     <label class="sr-only" for="taskkDue">date</label>
     <div class="col-lg-10">
-      <input type="date" class="form-control" id="taskDue" ng-model="task.due">
+      <input type="date" class="form-control em-simple-input" id="taskDue" ng-model="task.due">
     </div>
   </div>
 
   <div class="form-group">
     <label class="sr-only" for="taskParent">parent</label>
     <div class="col-lg-10">
-      <select class="form-control" id="taskParent" ng-model="parentTask" ng-options="project.title for project in tasks | tasksFilter:filterService.activeFilters.project" ng-hide="task.project">
-        <option value="">select list</option>
+      <select class="form-control em-simple-input" id="taskParent" ng-model="parentTask" ng-options="project.title for project in tasks | tasksFilter:filterService.activeFilters.project" ng-hide="task.project">
+        <option value="">select list...</option>
       </select>
     </div>
   </div>
@@ -26,8 +26,8 @@
   <div class="form-group">
     <label class="sr-only" for="taskContext">context</label>
     <div class="col-lg-10">
-      <select class="form-control" id="taskContext" ng-model="taskContext" ng-options="context.title for context in contexts" ng-hide="task.project">
-        <option value="">select context</option>
+      <select class="form-control em-simple-input" id="taskContext" ng-model="taskContext" ng-options="context.title for context in contexts" ng-hide="task.project">
+        <option value="">select context...</option>
       </select>
     </div>
   </div>
@@ -35,7 +35,7 @@
   <div class="form-group">
     <label class="sr-only" for="taskLink">link</label>
     <div class="col-lg-10">
-      <input type="text" class="form-control" id="taskLink" ng-model="task.link" placeholder="link..." ng-hide="task.project">
+      <input type="text" class="form-control em-simple-input" id="taskLink" ng-model="task.link" placeholder="link..." ng-hide="task.project">
     </div>
   </div>
 
